src/objects/Territory_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Territory_Country__c</fullName>
        <label>Territory Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_End_Date__c</fullName>
        <label>Territory End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Territory_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Start_Date__c</fullName>
        <label>Territory Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Territory_State__c</fullName>
        <label>Territory State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Territory Assignments</relationshipLabel>
        <relationshipName>Territory_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Territory Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Territory_Country__c</columns>
        <columns>Territory_State__c</columns>
        <columns>Territory_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TA-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Territory Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>